force-app/main/default/objects/MM_User_Response__c/MM_User_Response__c.object-meta.xml
<CustomObject>
    <description>Stores answers to individual questions. Dynamically handles different question types.</description>
    <label>User Response</label>
    <nameField>
        <displayFormat>URES-{0000}</displayFormat>
        <label>User Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>