force-app/main/default/objects/MM_User_Response__c/fields/MM_Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>MM_Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>