force-app/main/default/objects/MM_User_Response__c/fields/MM_Option_Text__c.field-meta.xml
<CustomField>
    <fullName>MM_Option_Text__c</fullName>
    <formula>MM_Selected_Option__r.MM_Option_Text__c</formula>
    <label>Option Text</label>
    <type>Text</type>
</CustomField>