force-app/main/default/objects/MM_User_Response__c/fields/MM_Question__c.field-meta.xml
<CustomField>
    <fullName>MM_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>MM_Question__c</referenceTo>
    <relationshipLabel>User Responses</relationshipLabel>
    <relationshipName>User_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>