force-app/main/default/objects/MM_User_Response__c/fields/MM_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>MM_Question_Text__c</fullName>
    <formula>MM_Question__r.MM_QuestionText__c</formula>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>