force-app/main/default/objects/MM_User_Response__c/fields/MM_Score__c.field-meta.xml
<CustomField>
    <fullName>MM_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>