force-app/main/default/objects/MM_User_Response__c/fields/MM_Selected_Option__c.field-meta.xml
<CustomField>
    <fullName>MM_Selected_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Option</label>
    <referenceTo>MM_Question_Option__c</referenceTo>
    <relationshipLabel>User Responses</relationshipLabel>
    <relationshipName>User_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>