force-app/main/default/objects/MM_User_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MM_Question_Text__c</columns>
    <columns>MM_Option_Text__c</columns>
    <columns>MM_Answer_Text__c</columns>
    <columns>MM_Score__c</columns>
    <columns>MM_Question__c</columns>
    <columns>MM_Selected_Option__c</columns>
    <columns>MM_Response_Session__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>